도시락통 클론 완성

--- a/8. 도시락통/index.html
+++ b/8. 도시락통/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/link.css">
 </head>
 <body>
 
@@ -67,7 +67,7 @@
                 <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_visual_3.jpg" alt="section_1_main_image">
 
                 <div class="inner">
-                    <div class="bold_text">
+                    <div class="bold_text style_font">
                         도시락유심
                     </div>
 
@@ -91,7 +91,7 @@
 
                 <div class="inner">
                     <div class="text_wrap">
-                        <span>도시락통 </span>서비스 둘러보기
+                        <span class="style_font">도시락통</span>서비스 둘러보기
                     </div>
     
                     <div class="img_wrap">
@@ -179,7 +179,7 @@
                         </div>
 
                         <div class="line_2">
-                            해외여행 갈 땐 <span>도시락통.</span>
+                            해외여행 갈 땐 <span class="style_font">도시락통.</span>
                         </div>
                     </div>
 
@@ -210,10 +210,7 @@
 
                         <div class="re_text_2 text">
                             <div class="line_1">
-                                더 나은 서비스 제공을 위해 지속적으로 연구, 개발하여 앞으로도 편리하고 즐거운 여행의 파트너가
-                            </div>
-                            <div class="line_2">
-                                되겠습니다.
+                                더 나은 서비스 제공을 위해 지속적으로 연구, 개발하여 앞으로도 편리하고 즐거운 여행의 파트너가 되겠습니다.
                             </div>
                         </div>
 
@@ -337,7 +334,7 @@
             </div>
 
             <div class="line_2">
-                고객센터 : <a href=""><p>1566-9070</p></a> (운영시간 9:00~18:00, 주말/공휴일/점심 12:00~13:00 제외)
+                <span>고객센터 : <a href=""><p>1566-9070</p></a></span> (운영시간 9:00~18:00, <span>주말/공휴일/점심 12:00~13:00 제외)</span>
             </div>
 
             <div class="line_3">
