--- a/8. 도시락통/index.html
+++ b/8. 도시락통/index.html
@@ -16,7 +16,7 @@
             <div class="header_inner">
                 <div class="logo">
                     <a href="#">
-                        <img src="https://blob.wifidosirak.com/wm-d01/tong/images/common/logo_white.png" alt="header_logo_image">
+                        <img src="https://blob.wifidosirak.com/wm-d01/tong/images/common/logo_white.png" alt="도시락통 헤더 로고">
                     </a>
                 </div>
 
@@ -64,7 +64,7 @@
         <div class="body_wrap">
 
             <section class="section_1">
-                <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_visual_3.jpg" alt="section_1_main_image">
+                <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_visual_3.jpg" alt="메인화면 도시락유심 사진">
 
                 <div class="inner">
                     <div class="bold_text style_font">
@@ -97,7 +97,7 @@
                     <div class="img_wrap">
                         <div class="left_wrap content_wrap">
                             <a href="#">
-                                <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_service_img1.jpg" alt=".section_2_left_image" class="inner_img">
+                                <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_service_img1.jpg" alt="와이파이도시락 메인 사진" class="inner_img">
                                 <div class="text_content">
                                     <div class="bold_text">
                                         와이파이도시락
@@ -120,7 +120,7 @@
                         <div class="right_wrap">
                             <div class="top_wrap content_wrap">
                                 <a href="#">
-                                    <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_service_img2.jpg" alt="section_2_right_top_image" class="inner_img">
+                                    <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_service_img2.jpg" alt="도시락유심 메인 사진" class="inner_img">
                                     <div class="text_content">
                                         <div class="bold_text">
                                             도시락유심
@@ -142,7 +142,7 @@
     
                             <div class="bottom_wrap content_wrap">
                                 <a href="#">
-                                    <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_service_img3.jpg" alt="section_2_right_bottom_image" class="inner_img">
+                                    <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_service_img3.jpg" alt="도시락eSIM 메인 사진" class="inner_img">
                                     <div class="text_content">
                                         <div class="bold_text">
                                             도시락eSIM
@@ -255,7 +255,7 @@
                                 READ MORE
                             </div>
                         </div>
-                        <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_banner_figure1.png" alt=".section_4_content_image_1">
+                        <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_banner_figure1.png" alt="도시락멤버스 일러스트">
                     </a>
                 </div>
 
@@ -282,7 +282,7 @@
                                 READ MORE
                             </div>
                         </div>
-                        <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_banner_figure2.png" alt="section_4_content_image">
+                        <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_banner_figure2.png" alt="도시락통 일러스트">
                     </a>
                 </div>
 
@@ -309,7 +309,7 @@
                                 READ MORE
                             </div>
                         </div>
-                        <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_banner_figure3.png" alt="section_4_content_image">
+                        <img src="https://blob.wifidosirak.com/wm-d01/tong/images/main_banner_figure3.png" alt="여행보험도시락 일러스트">
                     </a>
                 </div>
 
