--- a/10.인트로스/index.html
+++ b/10.인트로스/index.html
@@ -10,97 +10,204 @@
 
   <div class="wrap">
     <header>
+
+      <div class="side_menu_click">
+
+        <div class="side_header">
+          <div class="side_logo">
+            <img src="https://www.invitrosco.com/images/logo-wht.svg" alt="side_logo">
+          </div>
+
+          <div class="close_btn">
+          </div>
+        </div>
+
+        <ul class="side_text">
+          <li>
+            <div class="side_line">
+              <div class="line"></div>
+            </div>
+            <div class="side_bold">
+              <p>회사소개</p>
+            </div>
+            <ul class="side_re">
+              <li><a href="#">소개</a></li>
+              <li><a href="#">사업장</a></li>
+              <li><a href="#">인재채용</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <div class="side_line">
+              <div class="line"></div>
+            </div>
+            <div class="side_bold">
+              <p>제품소개</p>
+            </div>
+            <ul class="side_re">
+              <li><a href="#">면역진단</a></li>
+              <li><a href="#">분자진단</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <div class="side_line">
+              <div class="line"></div>
+            </div>
+            <div class="side_bold">
+              <p>R&D</p>
+            </div>
+            <ul class="side_re">
+              <li><a href="#">연구소 개요</a></li>
+              <li><a href="#">연구 분야</a></li>
+              <li><a href="#">연구 논문</a></li>
+              <li><a href="#">특허</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <div class="side_line">
+              <div class="line"></div>
+            </div>
+            <div class="side_bold">
+              <p>ESG</p>
+            </div>
+            <ul class="side_re">
+              <li><a href="#">환경보건안전경영</a></li>
+              <li><a href="#">윤리경영</a></li>
+              <li><a href="#">준법경영</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <div class="side_line">
+              <div class="line"></div>
+            </div>
+            <div class="side_bold">
+              <p>홍보센터</p>
+            </div>
+            <ul class="side_re">
+              <li><a href="#">공지사항</a></li>
+              <li><a href="#">언론보도</a></li>
+              <li><a href="#">홍보영상</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <div class="side_line">
+              <div class="line"></div>
+            </div>
+            <div class="side_bold">
+              <p>고객센터</p>
+            </div>
+            <ul class="side_re">
+              <li><a href="#">문의하기</a></li>
+            </ul>
+          </li>
+
+        </ul>
+      </div>
+
+      <div class="white_bg"></div>
+      
+
       <div class="logo">
         <a href="#">
-          <img src="https://www.invitrosco.com/images/logo.svg" alt="logo" class="logo_white">
-          <img src="https://www.invitrosco.com/images/logo-b.svg" alt="logo" class="logo_black">
+          <img src="https://www.invitrosco.com/images/logo.svg" alt="logo" class="white_logo">
+          <img src="https://www.invitrosco.com/images/logo-b.svg" alt="logo" class="black_logo">
         </a>
       </div>
 
-      <ul class="menu_wrap">
+      <div class="menu_wrap">
+        <ul class="menu_container">
+          <div class="black_line"></div>
 
-        <li class="menu">
-          <div class="menu_text">회사소개</div>
-          <ul class="sub_menu">
-            <li><a href="#">소개</a></li>
-            <li><a href="#">사업장</a></li>
-            <li><a href="#">인재채용</a></li>
-          </ul>
-        </li>
+          <li class="menu">
+            <div class="menu_text">회사소개</div>
+            <ul class="sub_menu">
+              <li><a href="#"><p>소개</p></a></li>
+              <li><a href="#"><p>사업장</p></a></li>
+              <li><a href="#"><p>인재채용</p></a></li>
+            </ul>
+          </li>
 
-        <li class="menu">
-          <div class="menu_text">제품소개</div>
-          <ul class="sub_menu">
-            <li><a href="#">면역진단</a></li>
-            <li><a href="#">분자진단</a></li>
-          </ul>
-        </li>
+          <li class="menu">
+            <div class="menu_text">제품소개</div>
+            <ul class="sub_menu">
+              <li><a href="#"><p>면역진단</p></a></li>
+              <li><a href="#"><p>분자진단</p></a></li>
+            </ul>
+          </li>
 
-        <li class="menu">
-          <div class="menu_text">R&D</div>
-          <ul class="sub_menu">
-            <li><a href="#">연구소 개요</a></li>
-            <li><a href="#">연구 분야</a></li>
-            <li><a href="#">연구 논문</a></li>
-            <li><a href="#">특허</a></li>
-          </ul>
-        </li>
+          <li class="menu">
+            <div class="menu_text">R&D</div>
+            <ul class="sub_menu">
+              <li><a href="#"><p>연구소 개요</p></a></li>
+              <li><a href="#"><p>연구 분야</p></a></li>
+              <li><a href="#"><p>연구 논문</p></a></li>
+              <li><a href="#"><p>특허</p></a></li>
+            </ul>
+          </li>
 
-        <li class="menu">
-          <div class="menu_text">ESG</div>
-          <ul class="sub_menu">
-            <li><a href="#">환경보건안전경영</a></li>
-            <li><a href="#">윤리경영</a></li>
-            <li><a href="#">준법경영</a></li>
-          </ul>
-        </li>
+          <li class="menu">
+            <div class="menu_text">ESG</div>
+            <ul class="sub_menu">
+              <li><a href="#"><p>환경보건안전경영</p></a></li>
+              <li><a href="#"><p>윤리경영</p></a></li>
+              <li><a href="#"><p>준법경영</p></a></li>
+            </ul>
+          </li>
 
-        <li class="menu">
-          <div class="menu_text">홍보센터</div>
-          <ul class="sub_menu">
-            <li><a href="#">공지사항</a></li>
-            <li><a href="#">언론보도</a></li>
-            <li><a href="#">홍보영상</a></li>
-          </ul>
-        </li>
+          <li class="menu">
+            <div class="menu_text">홍보센터</div>
+            <ul class="sub_menu">
+              <li><a href="#"><p>공지사항</p></a></li>
+              <li><a href="#"><p>언론보도</p></a></li>
+              <li><a href="#"><p>홍보영상</p></a></li>
+            </ul>
+          </li>
 
-        <li class="menu">
-          <div class="menu_text">고객센터</div>
-          <ul class="sub_menu">
-            <li><a href="#">문의하기</a></li>
-          </ul>
-        </li>
-        
-      </ul> 
+          <li class="menu">
+            <div class="menu_text">고객센터</div>
+            <ul class="sub_menu">
+              <li><a href="#"><p>문의하기</p></a></li>
+            </ul>
+          </li>
 
-      <ul class="header_side">
-        <li class="language">
+        </ul>
+      </div>
+
+      <div class="side">
+        <div class="language">
           <img src="https://www.invitrosco.com/images/global.svg" alt="language">
-        </li>
-        <li class="hbg">
+          <ul class="language_text">
+            <li><p>KOR</p></li>
+            <li><p>ENG</p></li>
+          </ul>
+        </div>
+        <div class="side_menu">
           <img src="https://www.invitrosco.com/images/menu.svg" alt="side_menu">
-        </li>
-      </ul>
-
-      <div class="white_box">
-        <div class="black_line"></div>
+        </div>
       </div>
     </header>
 
     <div class="body_wrap">
-      <div class="section_1">
+      <section class="section_1">
         <img src="https://www.invitrosco.com/images/main-vs1.jpg" alt="section_1_main_bg">
-      </div>
-      <div class="section_2"></div>
-      <div class="section_3"></div>
-      <div class="section_4"></div>
-      <div class="section_5"></div>
-      <div class="section_6"></div>
+      </section>
+      <section class="section_2"></section>
+      <section class="section_3"></section>
+      <section class="section_4"></section>
+      <section class="section_5"></section>
+      <section class="section_6"></section>
     </div>
 
-    <footer></footer>
+    <footer>
+
+    </footer>
   </div>
 
+  
   <script src="./javascript/script.js"></script>
   
 </body>
