--- a/10.인트로스/index.html
+++ b/10.인트로스/index.html
@@ -191,10 +191,25 @@
       </div>
     </header>
 
+    <!-- !header end -->
+
     <div class="body_wrap">
+
       <section class="section_1">
         <img src="https://www.invitrosco.com/images/main-vs1.jpg" alt="section_1_main_bg">
+
+        <div class="text_container">
+          <div class="main_text">
+            A Safe and Healthy Life
+          </div>
+
+          <div class="sub_text">
+            인비트로스는 조기진단을 통해 질병을 예방하거나 조기치료를 가능하게 하여 <br>
+            궁극적으로 인간이 더 안전하고 건강한 삶을 오래 누릴 수 있도록 돕습니다.
+          </div>
+        </div>
       </section>
+
       <section class="section_2"></section>
       <section class="section_3"></section>
       <section class="section_4"></section>
