section2 css complete

--- a/10.인트로스/index.html
+++ b/10.인트로스/index.html
@@ -210,10 +210,99 @@
         </div>
       </section>
 
-      <section class="section_2"></section>
+      <!-- ! section_1 end -->
+
+      <section class="section_2">
+        <div class="inner">
+
+          <div class="text_container">
+
+            <div class="left_box">
+              <div class="about_text">
+                About
+              </div>
+              <div class="main_text">
+                인비트로스는 인류와 과학기술의 <br>
+                더 나은 미래를 위해 연구를 지속하고 있습니다
+              </div>
+            </div>
+
+            <div class="right_box">
+              <a href="#" class="company_btn">
+                <div class="text_wrap">
+                  COMPANY
+                </div>
+                
+                <div class="arrow_wrap">
+
+                  <div class="arrow_inbox_black">
+                    <div class="arrow">
+                      <img src="https://www.invitrosco.com/images/arrow.svg" alt="arrow_black">
+                    </div>
+                    <div class="arrow">
+                      <img src="https://www.invitrosco.com/images/arrow.svg" alt="arrow_black">
+                    </div>
+                  </div>
+
+                  <div class="arrow_inbox_white">
+                    <div class="arrow">
+                      <img src="https://www.invitrosco.com/images/arrow-wht.svg" alt="arrow_white">
+                    </div>
+                    <div class="arrow">
+                      <img src="https://www.invitrosco.com/images/arrow-wht.svg" alt="arrow_white">
+                    </div>
+                  </div>
+
+                </div>
+
+              </a>
+            </div>
+          </div> 
+
+          <div class="contents_container">
+            <div class="left_contents">
+              <img src="https://www.invitrosco.com/images/ms1-ico1.svg" alt="contents">
+
+              <div class="contents_text">
+                <div class="main_text">
+                  점유율 1위
+                </div>
+
+                <div class="sub_text">
+                  높은 전문성을 기반으로 <br>
+                  국내 알러지 시장 점유율 70%로 <br>
+                  1위를 유지하고 있습니다.
+                </div>
+              </div>
+            </div>
+
+            <div class="right_contents">
+              <img src="https://www.invitrosco.com/images/ms1-ico2.svg" alt="contents">
+
+              <div class="contents_text">
+                <div class="main_text">
+                  국내 최초
+                </div>
+
+                <div class="sub_text">
+                  국내 최초 <br>
+                  MP-CLIA 기술을 사용한 <br>
+                  INF-γ assay
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section>
+      <!-- ! section_2 end -->
+
       <section class="section_3"></section>
+
       <section class="section_4"></section>
+
       <section class="section_5"></section>
+
       <section class="section_6"></section>
     </div>
 
